2005-07-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/PortableServer/ForwardRequest.java: New file.

2005-17-19  Lillian Angel <langel@redhat.com>

	* javax/swing/plaf/BasicTreeUI
	(setModel): changed to call JTree's setModel
	(setRootVisible): Likewise
	(isRootVisible): Likewise
	(getClosestPathForLocation): Implemented
	(paint): took out translate, no need to.
	(mouseClicked): clicking made smoother.
	
2005-17-19  Lillian Angel <langel@redhat.com>

	* javax/swing/plaf/BasicTreeUI:
	Moved several functions around for readability.
	Some formatting in various places.
	(paint): extended size of border drawn
	(mouseClicked): checked if path was null
	(getCellLocation): Now package-private.
	(paintNode): Implemented, there is no need to paint the leaf and non
	leaf separately. Works with custom icons.
	(paintRecursive): Now package-private. Changed to paint with paintNode.
	(paintControlIcons): Now package-private.
	(hasControlIcons): Now package-private.

2005-17-19  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JSlider.java
	(createStandardLabels(int)): updated API docs,
	(createStandardLabels(int, int)): throw IllegalArgumentException for
	bad arguments.

2005-17-18  Lillian Angel <langel@redhat.com>

	* javax/swing/plaf/BasicTreeUI
	(getPathBounds): checked if path was null initially
	(paint): no need to check for control icons
	(paintLeaf): reseting of icon
	(paintNonLeaf): resetting of icon
	(paintControlIcons): cleaned up
	(hasControlIcons): cleaned up
	* javax/swing/tree/DefaultTreeCellRenderer
	(getTreeCellRendererComponent): fixed to follow API	

2005-07-18  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JSlider.java:
	(JSlider(int)): updated API docs,
	(JSlider(int, int, int)): likewise,
	(JSlider(BoundedRangeModel)): removed code that handles a null 
	argument, and updated API docs.

2005-07-18  David Gilbert  <david.gilbert@object-refinery.com>
